--- a/research/02_base_model_preparation.ipynb
+++ b/research/02_base_model_preparation.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,28 +160,34 @@
     "            learning_rate=self.config.params_learning_rate\n",
     "        )\n",
     "\n",
+    "        self.full_model.compile(\n",
+    "            optimizer=tf.keras.optimizers.SGD(learning_rate=self.config.params_learning_rate),\n",
+    "            loss=tf.keras.losses.CategoricalCrossentropy(),\n",
+    "            metrics=['accuracy']\n",
+    "        )\n",
+    "\n",
     "        self.save_model(path=self.config.updated_base_model_path, model=self.model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-05-27 17:48:52,091: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-05-27 17:48:52,097: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-05-27 17:48:52,097: INFO: common: Created directory at : artifacts]\n",
-      "[2024-05-27 17:48:52,097: INFO: common: Created directory at : artifacts/prepare_base_model]\n",
-      "[2024-05-27 17:48:52,974: WARNING: saving_utils: Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.]\n",
+      "[2024-05-27 18:28:38,737: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-05-27 18:28:38,737: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-05-27 18:28:38,737: INFO: common: Created directory at : artifacts]\n",
+      "[2024-05-27 18:28:38,743: INFO: common: Created directory at : artifacts/prepare_base_model]\n",
+      "[2024-05-27 18:28:39,249: WARNING: saving_utils: Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.]\n",
       "Model: \"model_1\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " input_5 (InputLayer)        [(None, 224, 224, 3)]     0         \n",
+      " input_2 (InputLayer)        [(None, 224, 224, 3)]     0         \n",
       "                                                                 \n",
       " block1_conv1 (Conv2D)       (None, 224, 224, 64)      1792      \n",
       "                                                                 \n",
@@ -228,7 +234,7 @@
       "Trainable params: 50,178\n",
       "Non-trainable params: 14,714,688\n",
       "_________________________________________________________________\n",
-      "[2024-05-27 17:48:53,192: WARNING: saving_utils: Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.]\n"
+      "[2024-05-27 18:28:39,437: WARNING: saving_utils: Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.]\n"
      ]
     }
    ],
@@ -244,6 +250,13 @@
     "except Exception as e:\n",
     "    raise e"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
